# DLR-TomoSAR

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  clean.sh  coding_style.md  dataset_explore.ipynb  dataset_explore.py  pyproject.toml  requirements.txt
MoE/: MoE_README.md  __init__.py  config.py  experts.py  gating.py  moe_model.py
agents/: equation_animation_agent.md  model_diagram_agent.md
configuration/: autoencoder_config.py  backbone_config.py  benchmark_config.py  comparison.py  cross_validation_config.py  dataset_config.py  diagnostics.py  gaussian_config.py  geometry_config.py  inference_config.py  jepa_config.py  loss_config.py  models_config.py  norm_config.py  param_extraction.py  param_extraction_config.py  physics_check_config.py  preprocessing_config.py  processing_config.py  representation.py  single_train_config.py  train_config.py  training_config.py  tuning_config.py
core/: config.py  dataset.py  plots.py  training.py
docs/: training_pipeline_reference.md
interpretability/: __init__.py  base.py  feature_maps.py  grad_cam.py  latent_space.py  occlusion.py  parameter_sensitivity.py  perturbation.py  saliency.py
main/: _bootstrap.py  _inference_entry.py  batch_inference.py  batch_train.py  benchmark.py  compare_param_extraction_trials.py  compare_preprocessing_trials.py  compare_runs.py  compare_trials.py  cross_validate.py  experiment.py  extract_params.py  generate_interferograms.py  generate_reduced_tomogram.py  generate_tomogram.py  infer.py  infer_backbone.py  infer_image_autoencoder.py  infer_jepa.py  infer_param_extraction.py  train.py  (+27 more)
(+1272 files in other folders)
