[build-system]
requires      = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name            = "dlr-tomosar"
version         = "0.1.0"
description     = "Deep-learning Gaussian-mixture parameter estimation for SAR tomography"
readme          = "README.md"
requires-python = ">=3.11"
dependencies    = [
    "torch==2.11.0",
    "numpy==2.4.3",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
    "pillow==12.1.1",
    "scikit-image==0.26.0",
    "tensorboard==2.20.0",
    "optuna==4.8.0",
    "rich==15.0.0",
    "tqdm==4.67.3",
    "psutil==7.2.2",
    "pynvml==13.0.1",
]

[project.optional-dependencies]
processing = ["h5py>=3.11"]
sigma      = ["jax>=0.4.30"]
dev        = ["pytest==9.0.3", "pyflakes==3.4.0"]

[tool.setuptools.packages.find]
include = ["configuration*", "models*", "pipelines*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
